<resources>
    <string name="app_name">CognitusProyect</string>

    <string name="txtBienvenido">Bienvenido</string>
    <string name="txtCompleteDetalles">Por favor complete todos los detalles</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtContrasenia">Contraseña</string>
    <string name="txtIniciar">Iniciar</string>
    <string name="txtOlvideContrasenia">Olvidé contraseña</string>
    <string name="txtRegistrar">Registrar</string>
    <string name="txtCerrarSesion">Cerrar Sesión</string>
    <string name="txtHoraEntrad">Hora de entrada</string>
    <string name="txtConfirmar">Confirmar</string>
    <string name="txtSiguiente">Siguiente</string>
    <string name="txtFirma">Firma</string>
    <string name="txtCorreo">Correo</string>
    <string name="txtRecuperar">Recuperar</string>
    <string name="txtContraseniaActual">Contraseña actual</string>
    <string name="txtNuevoContrasenia">Nuevo contraseña</string>
    <string name="txtConfirmarContrasenia">Confirmar contraseña</string>
    <string name="txtGuardadCambios">Guardar Cambios</string>
    <string name="txtAceptoTerminos">Acepto términos y condiciones</string>
    <string name="txtGuardar">Guardar</string>
    <string name="txtTerminar">Terminar </string>
    <string name="txtHorasTrabajadas">Horas trabajadas</string>
    <string name="txtNota">Nota</string>
    <string name="validaEmail">Debe usar un correo valido</string>
    <string name="Message">No puede estar vacio</string>
    <string name="txtAlerCamaraGaleria">Seleccione opción para cambiar imagen de perfil</string>


    //databinding
    <string name="horasValidar">Es necesario ingresar una valor</string>
    <string name="horasValidarNotas">Es necesario ingresar una nota</string>
    <string name="firmaValidar">Es necesario realizar la firma</string>
    <string name="emptyMessage">Es necesarios realizar check in para la hora de entrada</string>
    <string name="txtRespuesta">Respuesta</string>


    //Menu
    <string name="txtCheckIn">Check In</string>
    <string name="txtNotificaciones">Notificaciones</string>
    <string name="txtPerfil">Perfil</string>
    <string name="txtEncuesta">Encuesta</string>
    <string name="txtTareas">Tareas</string>

    //services
    <string name="urlBase">http://35.155.161.8:8080/WSExample/</string>


    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
</resources>
