<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        android:orientation="vertical"
        tools:context=".activities.MainActivity">

        <!--LinearLayout para icono -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/logo"/>
        </LinearLayout>

        <!--LinearLayout para textos de bienvenida-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtBienvenido"
                android:textColor="@color/colorBlanco"
                android:textSize="@dimen/dimenBienvenido"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtCompleteDetalles"
                android:textColor="@color/colorBlanco"
                android:textSize="@dimen/dimenDetalles"
                android:gravity="center"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

        <!--LinearLayout pra buttons-->

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="35dp">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/usuario1">

               <EditText
                   android:id="@+id/eTemail"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:hint="@string/txtUsuario"
                   android:drawableLeft="@drawable/usuario_solid1"
                   android:backgroundTint="@android:color/transparent"
                   android:textColorHint="@color/colorBlanco"
                   android:textSize="@dimen/dimenTexGeneral"
                   android:textColor="@color/colorBlanco"
                   android:singleLine="true"
                   android:text="agustin@gmail.com"
                   android:paddingLeft="16dp"
                   android:maxLength="25"
                   android:drawablePadding="8dp"
                   app:validateMinLength="@{8}"
                   app:validateMaxLength="@{25}"
                   validateEmpty="@{true}"
                   app:validateType='@{"email"}'
                   app:validateTypeMessage="@{@string/validaEmail}"/>
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:background="@drawable/usuario1"
               android:gravity="center"
               android:layout_marginTop="20dp">

               <EditText
                   android:id="@+id/eTpassword"
                   android:layout_width="0dp"
                   android:layout_weight=".70"
                   android:layout_height="match_parent"
                   android:hint="@string/txtContrasenia"
                   android:backgroundTint="@android:color/transparent"
                   android:textColorHint="@color/colorBlanco"
                   android:textSize="@dimen/dimenTexGeneral"
                   android:textColor="@color/colorBlanco"
                   android:singleLine="true"
                   android:inputType="textPassword"
                   android:maxLength="10"
                   android:text="12345"
                   app:validateMinLength="@{2}"
                   app:validateMaxLength="@{10}"
                   validateEmpty="@{true}"
                   android:paddingLeft="30dp"/>

               <ImageView
                   android:id="@+id/imgMostrarPaswword"
                   android:layout_width="0dp"
                   android:layout_weight=".20"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:src="@drawable/eye_solid"
                   android:onClick="@{(v) -> clickListener.onClick(v)}"/>

           </LinearLayout>

          <TextView
              android:id="@+id/tVOlvidoPasssword"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="right"
              android:text="@string/txtOlvideContrasenia"
              android:textColor="@color/colorBlanco"
              android:layout_marginTop="20dp"
              android:onClick="@{(v) -> clickListener.onClick(v)}"/>

           <Button
               android:id="@+id/btnIniciar"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/iniciar"
               android:layout_marginTop="25dp"
               android:text="@string/txtIniciar"
               android:textColor="@color/colorAccent"
               android:textSize="@dimen/dimenIniciar"
               android:layout_marginRight="10dp"
               android:layout_marginLeft="10dp"
               android:onClick="@{(v) -> clickListener.onClick(v)}"/>

           <TextView
               android:id="@+id/tVRegistrar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/txtRegistrar"
               android:gravity="center"
               android:layout_gravity="center"
               android:layout_marginTop="45dp"
               android:textColor="@color/colorBlanco"
               android:textSize="@dimen/dimenRegistrar"
               android:onClick="@{(v) -> clickListener.onClick(v)}"/>

       </LinearLayout>


    </LinearLayout>

</layout>