<?xml version="1.0" encoding="utf-8"?>
<!--DataBinding-->
<layout>
    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <!--LinearLayout para Barra -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark">

        <!--LinearLayout cotenedor de logo y button cerrar sesion -->
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal">

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="2">

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/logo"
                   android:paddingTop="10dp"
                   android:paddingBottom="10dp"/>
           </LinearLayout>

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="50dp"
               android:layout_gravity="center"
               android:layout_weight="1">

               <Button
                   android:id="@+id/btnCerrarSesion"
                   android:layout_width="wrap_content"
                   android:layout_height="35dp"
                   android:background="@drawable/rectangulo"
                   android:text="@string/txtCerrarSesion"
                   android:textColor="@color/colorBlanco"
                   android:textSize="@dimen/dimenOlvideContrasenia"
                   android:padding="8dp"
                   android:fontFamily="sans-serif-medium"
                   android:layout_alignParentRight="true"
                   android:drawableLeft="@drawable/invalid_name"
                   android:drawablePadding="5dp"
                   android:textAllCaps="false"
                   android:textAlignment="center"
                   android:layout_centerHorizontal="true"
                   android:layout_gravity="center"
                   android:onClick="@{(v) -> clickListener.onClick(v)}"/>

           </LinearLayout>

       </LinearLayout>

    </LinearLayout>


    <!--LinearLayout para Menú -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="45dp">

        <RelativeLayout
            android:id="@+id/reLcheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rec_check"
            android:onClick="@{(v) -> clickListener.onClick(v)}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reloj"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCheckIn"
                android:textColor="@color/colorBlanco"
                android:textSize="@dimen/dimenMenu"
                android:padding="20dp"
                android:fontFamily="sans-serif-medium"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reLNotificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rec_check"
            android:layout_marginTop="20dp"
            android:onClick="@{(v) -> clickListener.onClick(v)}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/campana"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNotificaciones"
                android:textColor="@color/colorBlanco"
                android:textSize="@dimen/dimenMenu"
                android:padding="20dp"
                android:fontFamily="sans-serif-medium"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reLPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rec_check"
            android:layout_marginTop="20dp"
            android:onClick="@{(v) -> clickListener.onClick(v)}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/usuario_solid2"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPerfil"
                android:textColor="@color/colorBlanco"
                android:textSize="@dimen/dimenMenu"
                android:padding="20dp"
                android:fontFamily="sans-serif-medium"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reLEncuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rec_check"
            android:layout_marginTop="20dp"
            android:onClick="@{(v) -> clickListener.onClick(v)}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/encuesta"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEncuesta"
                android:textColor="@color/colorBlanco"
                android:textSize="@dimen/dimenMenu"
                android:padding="20dp"
                android:fontFamily="sans-serif-medium"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reLTareas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rec_check"
            android:layout_marginTop="20dp"
            android:onClick="@{(v) -> clickListener.onClick(v)}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tareas"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTareas"
                android:textColor="@color/colorBlanco"
                android:textSize="@dimen/dimenMenu"
                android:padding="20dp"
                android:fontFamily="sans-serif-medium"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>

</layout>